@@ -24,6 +24,7 @@
 * Update - Continue loading WCPay if the account is connected.
 * Add - Message to suggest using the previous version of WooCommerce Payments for old Woo core versions.
 * Fix - Appearance of upload file buttons inside challenge dispute page
+* Fix - Enable logging for UPE checkout errors.
 
 = 3.0.0 - 2021-09-16 =
 * Add - Download deposits report in CSV.
